tests/NormalTests/paczka1/small_fuzzy/90601167.err
Error in line 4: SXIs S942 32,1
Error in line 9: RfZXWmj6BFQ S343 19,6
